# ros_agv

./: CMakeLists.txt  README.md  package.xml
description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: rsp.launch.py
